@@ -596,6 +596,7 @@ All (GUI):
 - Fix crash when Destroy()-ing a TLW with non-TLW parent.
 - Fix crash in wxAuiToolBar::GetToolBarFits().
 - Make wxHTML more efficient when displaying large tables (Kinaou Hervé).
+- Prevent wxGrid rows/columns from becoming too small on double click.
 
 wxGTK:
 
